src/objects/Apttus_Config2__ExternalOrderSummary__c.object
<CustomObject>
    <description>Represents an external order summary associated with an account</description>
    <fields>
        <fullName>Apttus_Config2__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated account</description>
        <inlineHelpText>ID of the associated account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>External Order Summary</relationshipLabel>
        <relationshipName>ExternalOrderSummary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The order summary description</description>
        <inlineHelpText>The order summary description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ForecastData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the data provided is &quot;Forecast Data&quot; or the &quot;Actual Data&quot;</description>
        <inlineHelpText>Indicates whether the data provided is &quot;Forecast Data&quot; or the &quot;Actual Data&quot;</inlineHelpText>
        <label>Forecast Data ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LocationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated account location</description>
        <inlineHelpText>ID of the associated account location</inlineHelpText>
        <label>Location</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>External Order Summary</relationshipLabel>
        <relationshipName>ExternalOrderSummary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PeriodEndDate__c</fullName>
        <description>The period end date</description>
        <inlineHelpText>The period end date</inlineHelpText>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PeriodStartDate__c</fullName>
        <description>The period start date</description>
        <inlineHelpText>The period start date</inlineHelpText>
        <label>Period Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Status__c</fullName>
        <description>The status indicator</description>
        <inlineHelpText>The status indicator</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Ready for Incentive Processing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Type__c</fullName>
        <description>The external order type</description>
        <inlineHelpText>The external order type</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Data</fullName>
                    <default>true</default>
                    <label>Sales Data</label>
                </value>
                <value>
                    <fullName>Purchase Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>External Order Summary</label>
    <nameField>
        <displayFormat>EO-{00000000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Order Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>